--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
-    depends_on:
-      - postgres
-      - localstack
-      - prometheus
-      - jaeger
-    environment:
-      - POSTGRES_URI=postgres://postgres:postgres@postgres:5432/wallet
-      - POSTGRES_SSLMODE=false
-      - AWS_ENDPOINT=http://localstack:4566
-    restart: always
+#  app:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#    ports:
+#      - "3000:3000"
+#    depends_on:
+#      - postgres
+#      - localstack
+#      - prometheus
+#      - jaeger
+#    environment:
+#      - POSTGRES_URI=postgres://postgres:postgres@postgres:5432/wallet
+#      - POSTGRES_SSLMODE=false
+#      - AWS_ENDPOINT=http://localstack:4566
+#    restart: always
 
   postgres:
     image: postgres:17-alpine
@@ -65,15 +65,11 @@ services:
   jaeger:
     image: jaegertracing/all-in-one:latest
     ports:
-      - "5775:5775/udp"
-      - "6831:6831/udp"
-      - "6832:6832/udp"
-      - "5778:5778"
       - "16686:16686"  # UI port
-      - "14268:14268"
-      - "14250:14250"
+      - "4317:4317"
+      - "4318:4318"
     environment:
-      - COLLECTOR_ZIPKIN_HOST_PORT=9411
+      - COLLECTOR_OTLP_ENABLED=true
     restart: always
 
 volumes:
